assets/css/custom.scss
/* ... */
.gallery-columns-2 .gallery-item {
    max-width: 50%;
}

.gallery-columns-3 .gallery-item {
    max-width: 33.33%;
}

.gallery-columns-4 .gallery-item {
    max-width: 25%;
}

.gallery-columns-5 .gallery-item {
    max-width: 20%;
}

.gallery-columns-6 .gallery-item {
    max-width: 16.66%;
}

.gallery-columns-7 .gallery-item {
    max-width: 14.28%;
}

.gallery-columns-8 .gallery-item {
    max-width: 12.5%;
}

.gallery-columns-9 .gallery-item {
    max-width: 11.11%;
}

.gallery-caption {
    display: block;
}

/*--------------------------------------------------------------
# Media Queries
--------------------------------------------------------------*/

@media screen and (max-width: 991px) {
    .container {
        padding: 1.2em;
    }
}    

@media screen and (max-width: 768px) {
    .search-form {
        display: initial;
    }

    .search-form .search-submit {
        top: 14px;
    }
 
    p.site-description {
        display: none;
    }

}

@media screen and (max-width: 568px) {
    .sticky p {
        font-size: 1.2em;
    } 

    div#d3chart>iframe {
        height: 380px;
    }   
}

@media (min-width: 768px) {
    .navbar-nav>li>a {
    }

    .navbar .navbar-nav {
    }

    .navbar .navbar-collapse {
    }

    .navbar>.container-fluid .navbar-brand {
        left: 0;
        margin: auto 10%;
        position: absolute;  
        text-align: center;          
        top: 0;
        width: 80%;
    }
}   

